--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta property="og:title" content="Ziyadullayev Mirjalol's portfolio">
-	<meta property="og:image" content="https://ziyadullayev.vercel.app/images/5.webp">
-	<meta property="og:url" content="https://ziyadullayev.vercel.app/">
-	<meta name="description"
-		content="Mirjalol's Portfolio and blog site. There you can find information about me, my portfolio and public photos and even you can contact with me.">
+  <meta property="og:image" content="https://ziyadullayev.vercel.app/images/5.webp">
+  <meta property="og:url" content="https://ziyadullayev.vercel.app/">
+  <meta name="description"
+    content="Mirjalol's Portfolio and blog site. There you can find information about me, my portfolio and public photos and even you can contact with me.">
 
   <title>Mirjalol Ziyadullayev - Personal Portfolio</title>
 
@@ -140,30 +140,30 @@
 
           <li class="social-item">
             <a href="https://www.youtube.com/@ziyadullayevmirjalol" class="social-link">
-              <i class="fa-brands fa-youtube"></i> 
+              <i class="fa-brands fa-youtube"></i>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://instagram.com/ziyadullayeev" class="social-link">
-              <i class="fa-brands fa-instagram"></i> 
+              <i class="fa-brands fa-instagram"></i>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://www.github.com/ziyadullayevmirjalol" class="social-link">
-              <i class="fa-brands fa-github"></i> 
+              <i class="fa-brands fa-github"></i>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://www.linkedin.com/in/mirjalolziyadullayev/" class="social-link">
-              <i class="fa-brands fa-linkedin"></i> 
+              <i class="fa-brands fa-linkedin"></i>
             </a>
           </li>
           <li class="social-item">
             <a href="https://t.me/ziyadullayevmirjalol" class="social-link">
-              <i class="fa-brands fa-telegram"></i> 
+              <i class="fa-brands fa-telegram"></i>
             </a>
           </li>
 
@@ -232,17 +232,17 @@
         <section class="about-text">
           <p>
             With 6 years of experience in the IT industry since 2019, I have honed my skills
-						in understanding and engineering Computer Hardware Architecture, Software Architecture, and
-						Linux-based operations. My expertise extends to DevOps practices, where I ensure seamless
-						integration and delivery of software projects.
+            in understanding and engineering Computer Hardware Architecture, Software Architecture, and
+            Linux-based operations. My expertise extends to DevOps practices, where I ensure seamless
+            integration and delivery of software projects.
           </p>
 
           <p>
             I am proficient in creating full-stack applications with ASP.NET Core and React JS. My
-						passion for technology drives me to continuously learn and adapt to new challenges, delivering
-						high-quality solutions that meet the needs of modern businesses. Additionally, I excel in
-						building robust applications using Golang, and I also teach Golang, sharing my knowledge and
-						experience with others.
+            passion for technology drives me to continuously learn and adapt to new challenges, delivering
+            high-quality solutions that meet the needs of modern businesses. Additionally, I excel in
+            building robust applications using Golang, and I also teach Golang, sharing my knowledge and
+            experience with others.
           </p>
         </section>
 
@@ -284,7 +284,7 @@
                 <h4 class="h4 service-item-title">Freelance</h4>
 
                 <p class="service-item-text">
-                  I work remote when I'm in my countryside or if I have a free time, I do everything  that I can
+                  I work remote when I'm in my countryside or if I have a free time, I do everything that I can
                 </p>
               </div>
 
@@ -304,7 +304,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Uzbek</h5>
-                <data value="88">~88%</data> 
+                <data value="88">~88%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -564,48 +564,30 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3">Experience</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
-
-              <span>2007 — 2008</span>
-
+              <h4 class="h4 timeline-item-title">Mentor (Golang Back-End)</h4>
+              <span><strong>Haad LC, Tashkent, Uzbekistan</strong></span>
+              <span>Oct 2023 - May 2025</span>
+              <br>
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
-
-              <span>2006 — 2007</span>
-
-              <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
-
-              <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Mentored over 50 students, significantly improving their understanding and proficiency in Golang and
+                database management by providing one-on-one guidance, conducting workshops, and leading team-based
+                projects..
+                <br>
+                Completed over 10 backend projects in Golang, delivering robust, scalable, and efficient backend
+                solutions by applying industry best practices and collaborating closely with students
+                <br>
+                Taught database concepts and best practices, enhancing students' ability to design and manage databases
+                effectively through structured lessons and hands-on labs
+                <br>
+                Led a team of students, fostering teamwork and ensuring project goals were met on time by coordinating
+                tasks, providing leadership, and encouraging collaboration
               </p>
 
             </li>
@@ -621,49 +603,39 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">Education</h3>
           </div>
 
           <ol class="timeline-list">
 
+
+
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
-
-              <span>2015 — Present</span>
-
+              <h4 class="h4 timeline-item-title">.NET Bootcamp Result</h4>
+              <span><strong>Haad LC, Tashkent, Uzbekistan</strong></span>
+              <span>Nov 2023 - May 2024</span>
+              <br>
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Focused on technology Microsoft .NET, Visual Studio, C# Programming language from Basic to Advanced, OOP
+                Concepts, LINQ, Database Management Systems such as MS SQL Server and PostgreSQL, Implementing ORM
+                features using EF Core, Web-Development with ASP.NET Core Web Framework, ASP.NET Core MVC, Design
+                Patterns, SOLID, DRY, KISS, YAGNI principles,Software Architectures such as N-Tire Architecrure,
+                Microservice Architecture, Deployment with Docker, Over than 20 Projects during the Bootcamp with Best
+                Practices, Team Working and Project Management
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
-
-              <span>2013 — 2015</span>
-
+              <h4 class="h4 timeline-item-title">Foundation, Computer Science</h4>
+              <span><strong>Haad LC, Tashkent, Uzbekistan</strong></span>
+              <span>May 2023 - Oct 2023</span>
+              <br>
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Focused on Algorithms and Data Structures, Math, Computer Science, Machine Code and Assembly with Intel
+                8086 microprocessor, Golang programming language for Foundation skills
               </p>
 
             </li>
@@ -671,6 +643,8 @@
           </ol>
 
         </section>
+
+
 
         <section class="skill">
 
@@ -681,12 +655,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="50">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <h5 class="h5">Teaching</h5>
               </div>
 
             </li>
@@ -694,12 +663,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <h5 class="h5">Project Management</h5>
               </div>
 
             </li>
@@ -707,12 +671,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
+                <h5 class="h5">Problem Solving</h5>
               </div>
 
             </li>
@@ -720,16 +679,58 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <h5 class="h5">Teamwork</h5>
               </div>
 
             </li>
 
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Version Control</h5>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Deployment Skills</h5>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Linux</h5>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Fast Typing</h5>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Computer Hardware Architecrure</h5>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Software Architecrure</h5>
+              </div>
+
+            </li>
           </ul>
 
         </section>
