--- a/index.html
+++ b/index.html
@@ -758,15 +758,19 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Back End</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Full Stack</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Front End</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Console Applications</button>
             </li>
 
           </ul>
@@ -790,15 +794,19 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Back End</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Full Stack</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Front End</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Console Applications</button>
               </li>
 
             </ul>
@@ -807,167 +815,169 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="back end">
+              <a href="https://github.com/jamshidmaruf/arcana">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/dotnet-edu-logo.svg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Arcana. Learning Management System</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Back End</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="full stack">
+              <a href="https://road-to-the-dream.uz/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="https://avatars.githubusercontent.com/u/163491368?s=200&v=4" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Road to the Dream. Personal Tracking Platform</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Full Stack</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="front end">
+              <a href="https://hacker2319.netlify.app/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/fontend.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Scooba Life. Landing Page Project</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Front End</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="console applications">
+              <a href="https://github.com/mirjalolziyadullayev/SyncWave">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/cli.png" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">SyncWave. Personal Music Library Organizer</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Console APplication</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="console applications">
+              <a href="https://github.com/mirjalolziyadullayev/VocabularyBuilder">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/cli.png" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">Vocabulary Builder</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Console APplication</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="back end">
+              <a href="https://github.com/mirjalolziyadullayev/RADapi">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/golang.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">Road to the Dream Minimal API in Golang, Very Simple version</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Back End</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="back end">
+              <a href="https://github.com/mirjalolziyadullayev/cashbookAPI">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/golang.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">Cashbook Application Minimal API in Golang, Very Simple version</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Back End</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="console applications">
+              <a href="https://github.com/ziyadullayevmirjalol/HotelBookingSystem">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/cli.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">Hotel Booking System in .NET, Very Simple version</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Console Application</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="console applications">
+              <a href="https://github.com/ziyadullayevmirjalol/CardDeliveryService">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/cli.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Arrival</h3>
+                <h3 class="project-title">Card Delivery Service in .NET, Very Simple version</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Console Application</p>
 
               </a>
             </li>
+
+            
 
           </ul>
 
