--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Mirjalol Ziyadullayev" width="80">
+          <img src="./assets/images/my-avatar.jpg" alt="Mirjalol Ziyadullayev" width="80" style="border-radius: 30px;">
         </figure>
 
         <div class="info-content">
@@ -976,8 +976,6 @@
 
               </a>
             </li>
-
-            
 
           </ul>
 
