--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
           </li>
 
           <li class="social-item">
+            <a href="https://www.github.com/mirjalolziyadullayev" class="social-link">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+
+          <li class="social-item">
             <a href="https://www.linkedin.com/in/mirjalolziyadullayev/" class="social-link">
               <i class="fa-brands fa-linkedin"></i>
             </a>
