--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
           <li class="social-item">
             <a href="https://www.github.com/ziyadullayevmirjalol" class="social-link">
-              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-gitlab"></i>
             </a>
           </li>
 
