--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="info-content">
           <h1 class="name" title="Nuryagdy Ashyrgeldiyev">Nuryagdy Ashyrgeldiyev</h1>
 
-          <p class="title">Front End Developer, Graphic Designer</p>
+          <p class="title">Frontend Developer, Graphic Designer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
