--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Freelance</h4>
+                <h4 class="h4 service-item-title">Freelance Design</h4>
 
                 <p class="service-item-text">
-                  I work remote when I'm in my countryside or if I have a free time, I do everything that I can
+                  I work remote when I'm in my countryside or if I have a free time, I do graphic designs that I can
                 </p>
               </div>
 
@@ -310,6 +310,16 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Turkish</h5>
+                <data value="77">~77%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 77%;"></div>
+              </div>
+
+            </li>
+              <div class="title-wrapper">
+                <h5 class="h5">Uzbek</h5>
                 <data value="77">~77%</data>
               </div>
 
