--- a/index.html
+++ b/index.html
@@ -318,8 +318,10 @@
               </div>
 
             </li>
+            <li class="skills-item">
+
               <div class="title-wrapper">
-                <h5 class="h5">Uzbek</h5>
+                <h5 class="h5">Turkish</h5>
                 <data value="77">~77%</data>
               </div>
 
