--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Turkish</h5>
+                <h5 class="h5">Uzbek</h5>
                 <data value="77">~77%</data>
               </div>
 
@@ -599,7 +599,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3">Education and Courses</h3>
           </div>
 
           <ol class="timeline-list">
@@ -642,7 +642,33 @@
               </p>
 
             </li>
+             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Georgia Institute of Technology</h4>
+              <span><strong>Speak English Professionally</strong></span>
+              <span>Completed in 2024</span>
+              <br>
+              <p class="timeline-text">
+                This certificate has enhanced my understanding of Multiple Sclerosis, covering its pathophysiology, diagnosis, and management. 
+                I am dedicated to using my knowledge in IT and biotechnology to make a meaningful impact in the medical field, 
+                helping to improve patient outcomes and support those in need.
+              </p>
+
+            </li>
+            
+             <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title"> Asian Development Bank Institute</h4>
+              <span><strong>Cybersecurity</strong></span>
+              <span>Completed in 2024</span>
+              <br>
+              <p class="timeline-text">
+                This certificate has enhanced my understanding of Multiple Sclerosis, covering its pathophysiology, diagnosis, and management. 
+                I am dedicated to using my knowledge in IT and biotechnology to make a meaningful impact in the medical field, 
+                helping to improve patient outcomes and support those in need.
+              </p>
+
+            </li>
           </ol>
 
         </section>
