--- a/index.html
+++ b/index.html
@@ -574,6 +574,19 @@
 
           <ol class="timeline-list">
 
+           <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">English teacher</h4>
+              <span><strong>Private English Tutor. Ashgabat, Turkmenistan</strong></span>
+              <span>01.10.2022-01.05.2023</span>
+              <br>
+              <brDue class="timeline-text">
+               When I as a private English tutor, I worked one-on-one with students of various age groups and proficiency levels.
+I tailored lesson plans to individual needs, focusing on speaking, grammar, and  writing skills.
+              </p>
+
+            </li>
+
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Front End Developer</h4>
