--- a/index.html
+++ b/index.html
@@ -573,6 +573,12 @@
           </div>
 
           <ol class="timeline-list">
+            
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Cashier / Sales Assistant</h4>
+              <span><strong>Cashier. Altyn Chynr Market, Ashgabat</strong></span>
+              <span>6 month</span>
+            </li>
 
            <li class="timeline-item">
 
