--- a/index.html
+++ b/index.html
@@ -574,16 +574,22 @@
 
           <ol class="timeline-list">
             
+           <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Freelance E-commerce</h4>
+              <span><strong>Trendyol. Ashgabat, Turkmenistan</strong></span>
+              <span>More than 1 year</span>
+            </li>
+            
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Cashier / Sales Assistant</h4>
-              <span><strong>Cashier. Altyn Chynr Market, Ashgabat</strong></span>
+              <span><strong>Altyn Chynar Market. Ashgabat, Turkmenistan</strong></span>
               <span>6 month</span>
             </li>
 
            <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">English teacher</h4>
-              <span><strong>Private English Tutor. Ashgabat, Turkmenistan</strong></span>
+              <h4 class="h4 timeline-item-title">Private English Tutor</h4>
+              <span><strong>Ashgabat, Turkmenistan</strong></span>
               <span>01.10.2022-01.05.2023</span>
               <br>
               <brDue class="timeline-text">
