--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/nuryagdy-ashyrgeldiyev-221208335/" class="social-link">
+            <a href="https://www.linkedin.com/in/Nuryagdy Ashyrgeldiyev/" class="social-link">
               <i class="fa-brands fa-linkedin"></i>
             </a>
           </li>
