--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="nuryashyr5@outlook.com" class="contact-link">nuryashyr5@gmail.com</a>
+              <a href="nuryashyr5@outlook.com" class="contact-link">nuryasyr5@gmail.com</a>
             </div>
 
           </li>
